Creazione classi per la scrittura del file XML da inserire nel JAR
Creazione classi per la scrittura del file XML da inserire nel JAR